cluster/prod/hydra/hydra/hydra-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-hydra-ingress
  namespace: hydra
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nzbhydra2
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: traefik
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
    ports:
    - protocol: TCP
      port: 5076
  - from:
    - namespaceSelector:
        matchLabels:
          ns: sonarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: sonarr
    ports:
    - protocol: TCP
      port: 5076
    - protocol: TCP
      port: 8888
  - from:
    - namespaceSelector:
        matchLabels:
          ns: radarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: radarr
    ports:
    - protocol: TCP
      port: 5076
    - protocol: TCP
      port: 8888
  - from:
    - namespaceSelector:
        matchLabels:
          ns: readarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: readarr
    ports:
    - protocol: TCP
      port: 5076
    - protocol: TCP
      port: 8888
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-hydra-egress
  namespace: hydra
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nzbhydra2
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          ns: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: adguard
      podSelector:
        matchLabels:
          app.kubernetes.io/name: adguard-work
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.0.10/32
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: nzbget
      podSelector:
        matchLabels:
          app.kubernetes.io/name: nzbget
    ports:
    - port: 6789
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
    ports:
    - port: 501
      protocol: TCP
    - port: 443
      protocol: TCP
